Fix -> Responsiveness on mobile devices

--- a/src/components/portfolio/Responsivo.scss
+++ b/src/components/portfolio/Responsivo.scss
@@ -19,7 +19,8 @@ h4 {
   }
 
   #RespImages {
-    width: 50vw;
+    width: 70vw;
+    height: 35vw;
   }
 }
 @media screen and (min-width: $medium) {
